auto-test/tests/chapter_15/invalid_types/extra_credit/compound_assign_to_nested_array.c


int main(void) {
    long arr[2][2] = {{1, 2}, {3, 4}};
    arr[1] += 1;
    return 0;
}